@@ -1,5 +1,11 @@
 Release history for xiate
 
+next
+  [Added]
+  - Support explicit hyperlinks. This adds the new variable
+    "hyperlink_handler" to config.h and REQUIRES you to use VTE 0.50 or
+    newer. See config.def.h for more info on that feature.
+
 v17.09  2017-09-16
   [LICENSING]
   - The project has been relicensed under the MIT license (more
